--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,15 +36,10 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   get: ^4.6.6
   google_fonts: ^6.1.0
+  http: ^1.1.0
   web: ^0.3.0
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
