--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.1.0
   http: ^1.1.0
+  shared_preferences: ^2.2.2
   web: ^0.3.0
 
 dev_dependencies:
