--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   awesome_dialog: ^3.1.0
   cupertino_icons: ^1.0.2
+  animated_bottom_navigation_bar: ^1.3.0
+  animated_notch_bottom_bar: ^1.0.0
+  curved_navigation_bar: ^1.0.3
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.9.0
