--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  awesome_dialog: ^3.1.0
-  cupertino_icons: ^1.0.2
   animated_bottom_navigation_bar: ^1.3.0
   animated_notch_bottom_bar: ^1.0.0
+  awesome_dialog: ^3.1.0
+  cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
   flutter:
     sdk: flutter
@@ -40,8 +40,11 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.1.0
   http: ^1.1.0
+  dotted_border: ^2.1.0
   shared_preferences: ^2.2.2
   web: ^0.3.0
+  image_picker: ^1.0.5
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_lints: ^3.0.1
