--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   web: ^0.3.0
   image_picker: ^1.0.5
   file_picker: ^6.1.1
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_lints: ^3.0.1
